JG-2001-11-07-1: Bugfix: Retrieving a string value from a cull object field 
                 and setting this value again for the same field produced a 
                 memory access error.

JG-2001-11-07-0: Adjust MAKEOPT for aimk option -qmake to reflect latest
                 changes to qmake.

EB-2001-11-06-1: Fix: qdel of pending job task array took a long time

CR-2001-11-06-0: Testsuite:
                    - comparing reset_scheduler setup values on startup 
                      with the default from installation
                    - additional testing procedures for sharetree test
                    - setting default value for rlogin_max_open_connections
                      down to 20
                    - procedure reset_scheduler setup value update

EB-2001-11-06-0: classic_sgeee_scheduling=1 
                 => share_override_tickets=1
                 => share_functional_shares=0
                 => share_deadline_tickets=1


AA-2001-11-06-0: GE version of intro,logo.xpm, colors reduced

AA-2001-11-05-3: GE version of intro,logo.xpm

AA-2001-11-05-2: Fix for core dump if no submit/admin host in ticket dialogue

AA-2001-11-05-1: copyright for GE

AA-2001-11-05-0: obsolete pixmaps removed

AA-2001-10-31-0: copyright notice

EB-2001-11-05-0: Bugfix: Ckpt jobs and jobs exiting with exit state 99
                 could meet an old instance of the same job if the 
                 scheduler was to fast.

AH-2001-11-05-0: Fixes with qstat -pe <pe_name> and qselect -pe <pe_name>
                 - 'all' keyword in PE's queue_list was not honoured
                 - non-parallel queues were selected

JG-2001-11-02-1: qstat -j aborted when writing usage of pe tasks

JG-2001-11-02-0: qmake: Does not need to export variable PWD when executing 
                        remote tasks (qrsh option -v PWD) - PWD is setup 
                        correctly by execd/shepherd.

CR-2001-10-31-0: Testsuite:
                   Added new test for share tree in